# pfd

./: README.md
desk/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  config.sub  configure  configure.in  err  io  out  outs  subdirs
desk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
desk/bakebuild/: build.bat
desk/doc/: Makefile.am  format
desk/doc/aboutwx/: wx.txt
desk/doc/en/: Makefile.am  index.docbook
desk/images/: connect.xpm  ethernet.xpm  newdevice.xpm  stop.xpm
desk/include/: acqconfig.h  acqhelp.h  acqpanel.h  acqreportdoc.h  acqreportview.h  bluetoothwiz.h  channelgrid.h  channelwiz.h  connectionthread.h  defaultheader.h  defines.h  device.h  devicemanager.h  displayframe.h  displaythread.h  dispwiz.h  generalwiz.h  hardwaredlg.h  images.h  managetext.h  mapdevice.h  mcontrols.h  multiplexdisp.h  netwiz.h  pfdevice.h  reportwiz.h  scanfile.h  serialwiz.h  ssconfig.h  tableinfo.h  textheader.h  usbwiz.h  wxdefs.h
desk/include/acq/: acqplugin.h  acqtypes.h  bluetoothcom.h  comdefs.h  protocolhandler.h  reportgen.h  serialcom.h  tcpcom.h  textreportgen.h  udpcom.h  usbcom.h  version.h  virtualcom.h  xlsreportgen.h
desk/include/wx/plot/: plot.h
desk/lib/acqcom/: virtualcom.cpp
desk/lib/acqcom/bluetooth/: bluetoothcom.cpp
desk/lib/acqcom/network/: a.out  file  (+5 more)
desk/lib/acqconfig/: acqconfig.cpp
desk/lib/acqhelp/: acqhelp.cpp
desk/lib/acqreport/: reportgen.cpp
desk/lib/acqvis/: channelgrid.cpp  multiplexdisp.cpp
desk/macros/cvs/: Entries  Repository
desk/misc/: acquireware.desktop
desk/plugins/: Makefile.am  Makefile.in  libssproto.la  outs  protocolhandler.cpp  ssproto.h
desk/plugins/com/: Makefile.am
desk/plugins/protocol/: .cpp.loT  Makefile.am  Makefile.in
desk/src/: Makefile.am  Makefile.in  acqpanel.cpp  acqreportdoc.cpp  acqreportview.cpp  io  outs  pfdevice.cpp
desk/src/controls/: managetext.cpp  mcontrols.cpp  tableinfo.cpp
desk/src/device/: device.cpp  displayframe.cpp  mapdevice.cpp
desk/src/handlers/: connectionthread.cpp  devicemanager.cpp  displaythread.cpp  scanfile.cpp
desk/src/wizard/: bluetoothwiz.cpp  channelwiz.cpp  dispwiz.cpp  generalwiz,cpp  hardwaredlg.cpp  netwiz.cpp  reportwiz.cpp  serialwiz.cpp  usbwiz.cpp
desk/tests/: a1.c  main.c  main.cpp
desk/windows/: iacquire.dsp  iacquire.dsw  iacquire.plg
(+15 files in other folders)
